--- a/tab/style.css
+++ b/tab/style.css
@@ -27,6 +27,21 @@ body {
   margin: 0 auto;
   background: #dbaeae;
 }
+.tab__header {
+  position: relative;
+}
+.tab__body {
+  position: relative;
+  width: 500px;
+  margin: 0 auto;
+  background: #71c052;
+}
+.tab__body div {
+  display: none;
+}
+.tab__body div.on {
+  display: block;
+}
 .tab__list {
   display: flex;
 }
@@ -45,16 +60,6 @@ body {
   background: lightskyblue;
   border-radius: 5px;
   transition: 0.4s ease-in-out;
-}
-
-.tab-content {
-  position: relative;
-  width: 500px;
-  margin: 0 auto;
-  background: #71c052;
-}
-.tab-content > div:not(:first-of-type) {
-  display: none;
 }
 
 /*# sourceMappingURL=style.css.map */
