--- a/tab/style.scss
+++ b/tab/style.scss
@@ -27,6 +27,25 @@ body {
   margin: 0 auto;
   background: #dbaeae;
 
+  &__header {
+    position: relative;
+  }
+
+  &__body {
+    position: relative;
+    width: 500px;
+    margin: 0 auto;
+    background: #71c052;
+
+    div {
+      display: none;
+    }
+
+    div.on {
+      display: block;
+    }
+  }
+
   &__list {
     display: flex;
   }
@@ -48,15 +67,5 @@ body {
     border-radius: 5px;
     transition: 0.4s ease-in-out;
   }
-}
 
-.tab-content {
-  position: relative;
-  width: 500px;
-  margin: 0 auto;
-  background: #71c052;
-
-  > div:not(:first-of-type) {
-    display: none;
-  }
 }
